refactor: for dropdown cleanup #697

--- a/components/dropdown/apiExamples/chevronButton.html
+++ b/components/dropdown/apiExamples/chevronButton.html
@@ -1,9 +1,7 @@
 <auro-dropdown aria-label="custom label" chevron>
   Lorem ipsum solar
   <div slot="trigger">
-    <auro-button
-      slot="trigger"
-      fluid>
+    <auro-button slot="trigger">
       Dropdown
     </auro-button>
   </div>
