--- a/components/dropdown/apiExamples/commonLabelledby.html
+++ b/components/dropdown/apiExamples/commonLabelledby.html
@@ -1,6 +1,6 @@
 <p id="foo">The element is labelled by content external to the element.</p>
 
-<auro-dropdown id="commonAdvanced" aria-labelledby="foo" bordered rounded inset chevron>
+<auro-dropdown id="commonAdvanced" layout="classic" shape="classic" size="lg" aria-labelledby="foo" chevron>
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
