--- a/components/dropdown/apiExamples/commonSlot.html
+++ b/components/dropdown/apiExamples/commonSlot.html
@@ -1,4 +1,4 @@
-<auro-dropdown id="commonSlot" common>
+<auro-dropdown id="commonSlot" layout="classic" shape="classic" size="lg" chevron>
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
