--- a/components/dropdown/apiExamples/custom.html
+++ b/components/dropdown/apiExamples/custom.html
@@ -1,4 +1,4 @@
-<custom-dropdown id="customCommon" common aria-label="Label content for screen reader">
+<custom-dropdown id="customCommon" layout="classic" shape="classic" size="lg" aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
