--- a/components/dropdown/apiExamples/fullscreen.html
+++ b/components/dropdown/apiExamples/fullscreen.html
@@ -1,5 +1,5 @@
 <h3>Never fullscreen</h3>
-<auro-dropdown id="common-never-fullscreen" common aria-label="Label content for screen reader" fullscreenBreakpoint="disabled">
+<auro-dropdown id="common-never-fullscreen" layout="classic" shape="classic" size="lg" aria-label="Label content for screen reader" fullscreenBreakpoint="disabled">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
@@ -16,7 +16,7 @@
 </auro-dropdown>
 
 <h3>Always fullscreen</h3>
-<auro-dropdown id="common-always-fullscreen" common aria-label="Label content for screen reader" fullscreenBreakpoint="xl">
+<auro-dropdown id="common-always-fullscreen" layout="classic" shape="classic" size="lg" aria-label="Label content for screen reader" fullscreenBreakpoint="xl">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
