--- a/components/dropdown/apiExamples/onDarkBordered.html
+++ b/components/dropdown/apiExamples/onDarkBordered.html
@@ -1,4 +1,4 @@
-<auro-dropdown onDark aria-label="custom label" bordered>
+<auro-dropdown onDark aria-label="custom label" layout="classic" shape="classic" size="lg">
   Lorem ipsum solar
   <div slot="trigger">
     Trigger
