--- a/components/dropdown/apiExamples/onDarkCommon.html
+++ b/components/dropdown/apiExamples/onDarkCommon.html
@@ -1,4 +1,4 @@
-<auro-dropdown onDark common id="commonOnDark" aria-label="Label content for screen reader">
+<auro-dropdown onDark layout="classic" shape="classic" size="lg" id="commonOnDark" aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
