--- a/components/dropdown/apiExamples/onDarkCommonSlot.html
+++ b/components/dropdown/apiExamples/onDarkCommonSlot.html
@@ -1,4 +1,4 @@
-<auro-dropdown onDark common id="commonSlotOnDark">
+<auro-dropdown onDark layout="classic" shape="classic" size="lg" id="commonSlotOnDark">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
