--- a/components/dropdown/apiExamples/onDarkDisabled.html
+++ b/components/dropdown/apiExamples/onDarkDisabled.html
@@ -3,9 +3,7 @@
   disabled
   onDark
   chevron
-  rounded
-  inset
-  bordered>
+  layout="classic" shape="classic" size="lg">
   Lorem ipsum solar
   <div slot="trigger">
     Trigger
