--- a/components/dropdown/apiExamples/onDarkError.html
+++ b/components/dropdown/apiExamples/onDarkError.html
@@ -1,4 +1,4 @@
-<auro-dropdown onDark common error id="commonSlotErrorOnDark">
+<auro-dropdown onDark layout="classic" shape="classic" size="lg" error id="commonSlotErrorOnDark">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
