--- a/components/dropdown/apiExamples/programmaticallyShow.html
+++ b/components/dropdown/apiExamples/programmaticallyShow.html
@@ -2,7 +2,7 @@
   <span slot="label">Enter a value to show the dropdown</span>
 </auro-input>
 
-<auro-dropdown id="showMethodExample" aria-label="custom label" fluid rounded bordered inset>
+<auro-dropdown id="showMethodExample" aria-label="custom label" layout="classic" shape="classic" size="lg">
   <p>
     Lorem ipsum solar
   </p>
