--- a/components/dropdown/apiExamples/common.html
+++ b/components/dropdown/apiExamples/common.html
@@ -1,4 +1,4 @@
-<auro-dropdown id="common" common aria-label="Label content for screen reader">
+<auro-dropdown id="common" layout="classic" shape="classic" size="lg" aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
