--- a/components/dropdown/apiExamples/programmaticallyHide.html
+++ b/components/dropdown/apiExamples/programmaticallyHide.html
@@ -1,4 +1,4 @@
-<auro-dropdown id="hideExample" aria-label="custom label" fluid rounded bordered inset>
+<auro-dropdown id="hideExample" aria-label="custom label" layout="classic" shape="classic" size="lg">
   <p>
     Lorem ipsum solar
   </p>
