feat: add ariaLabel slots for password and clear icon buttons

--- a/components/combobox/apiExamples/classic/basic.html
+++ b/components/combobox/apiExamples/classic/basic.html
@@ -1,4 +1,6 @@
 <auro-combobox layout="classic" shape="classic" size="lg" placeholder="Placeholder content" required style="width: 249px;">
+  <span slot="ariaLabel.bib.close">Close combobox</span>
+  <span slot="ariaLabel.input.clear">Clear All</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
