--- a/components/combobox/apiExamples/snowflake/basic.html
+++ b/components/combobox/apiExamples/snowflake/basic.html
@@ -1,4 +1,6 @@
 <auro-combobox layout="snowflake" shape="snowflake" size="lg" placeholder="Placeholder content" required ondark style="width: 249px;">
+  <span slot="ariaLabel.bib.close">Close combobox</span>
+  <span slot="ariaLabel.input.clear">Clear All</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
