--- a/components/counter/apiExamples/dropdown-mobile-properties.html
+++ b/components/counter/apiExamples/dropdown-mobile-properties.html
@@ -1,5 +1,6 @@
 <div style="max-width: 350px;">
   <auro-counter-group id="dropdownCouterExample" isDropdown fullscreenBreakpoint="lg">
+    <span slot="ariaLabel.bib.close">Close Popup</span>
     <span slot="label">Passengers</span>
     <span slot="bib.fullscreen.headline">Passengers</span>
     <div slot="helpText">This is help text</div>
