--- a/components/counter/apiExamples/onDark-dropdown-snowflake.html
+++ b/components/counter/apiExamples/onDark-dropdown-snowflake.html
@@ -1,5 +1,6 @@
 <!-- Example of counter-group properties -->
 <auro-counter-group max="10" min="2" isDropdown layout="snowflake" ondark>
+  <span slot="ariaLabel.bib.close">Close Popup</span>
   <div slot="bib.fullscreen.headline">Group fullscreen label</div>
   <auro-icon slot="typeIcon" category="interface" name="account-stroke" customColor></auro-icon>
   <div slot="label">Snowflake Dropdown Group</div>
