--- a/components/datepicker/apiExamples/basicRange.html
+++ b/components/datepicker/apiExamples/basicRange.html
@@ -1,4 +1,5 @@
 <auro-datepicker range minDate="07/08/2025">
+  <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="bib.fullscreen.headline">Datepicker Range Headline</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
