--- a/components/datepicker/apiExamples/snowflake/ondark-range.html
+++ b/components/datepicker/apiExamples/snowflake/ondark-range.html
@@ -1,4 +1,5 @@
 <auro-datepicker range layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+  <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
