--- a/components/input/apiExamples/basic.html
+++ b/components/input/apiExamples/basic.html
@@ -1,4 +1,5 @@
 <auro-input>
+  <span slot="ariaLabel.clear">Clear All</span>
   <span slot="label">Label</span>
   <span slot="helpText">Help Text</span>
 </auro-input>
