--- a/components/select/apiExamples/classic/basic-ondark.html
+++ b/components/select/apiExamples/classic/basic-ondark.html
@@ -1,4 +1,5 @@
 <auro-select onDark placeholder="Placeholder content">
+  <span slot="ariaLabel.bib.close">Close Popup</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
