--- a/components/select/apiExamples/emphasized/basic-ondark.html
+++ b/components/select/apiExamples/emphasized/basic-ondark.html
@@ -1,5 +1,6 @@
 <div>
   <auro-select layout="emphasized" shape="pill" size="xl" ondark required style="width:300px;">
+    <span slot="ariaLabel.bib.close">Close Popup</span>
     <span slot="label">Label</span>
     <span slot="helpText">Help Text</span>
     <auro-menu nocheckmark>
