--- a/components/select/apiExamples/snowflake/basic.html
+++ b/components/select/apiExamples/snowflake/basic.html
@@ -1,5 +1,6 @@
 <div style="display: flex; flex-direction: row; gap: 10px;">
   <auro-select placeholder="placeholder text" layout="snowflake" shape="snowflake" forceDisplayValue style="display:inline-block;">
+    <span slot="ariaLabel.bib.close">Close Popup</span>
     <span slot="label">Select Example</span>
     <auro-menu nocheckmark>
       <auro-menuoption value="flights">
