--- a/components/counter/apiExamples/dropdown-error-basic.html
+++ b/components/counter/apiExamples/dropdown-error-basic.html
@@ -1,4 +1,5 @@
 <auro-counter-group isDropdown>
+  <span slot="ariaLabel.bib.close">Close Popup</span>
   <div slot="bib.fullscreen.headline">Passengers</div>
   <div slot="label">Passengers</div>
   <auro-counter error="Cannot have less than 1 adult passenger">
