--- a/components/counter/apiExamples/dropdown-error-custom.html
+++ b/components/counter/apiExamples/dropdown-error-custom.html
@@ -1,4 +1,5 @@
 <auro-counter-group error="Please select the appropriate number of passengers" isDropdown>
+  <span slot="ariaLabel.bib.close">Close Popup</span>
   <div slot="bib.fullscreen.headline">Passengers</div>
   <div slot="label">Passengers</div>
   <auro-counter error="Cannot have less than 1 adult passenger">
