--- a/components/counter/apiExamples/dropdown.html
+++ b/components/counter/apiExamples/dropdown.html
@@ -1,5 +1,6 @@
 <div style="max-width: 350px;">
   <auro-counter-group isDropdown>
+    <span slot="ariaLabel.bib.close">Close Popup</span>
     <span slot="bib.fullscreen.headline">Passengers</span>
     <div slot="label">Passengers</div>
     <auro-counter>
