--- a/components/datepicker/apiExamples/emphasized/basic.html
+++ b/components/datepicker/apiExamples/emphasized/basic.html
@@ -1,4 +1,5 @@
 <auro-datepicker format="mm/dd/yy" style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+  <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Date</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
@@ -6,6 +7,7 @@
 </auro-datepicker>
 
 <auro-datepicker format="mm/dd/yy" range style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+  <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
