--- a/components/datepicker/apiExamples/onDark.html
+++ b/components/datepicker/apiExamples/onDark.html
@@ -1,4 +1,5 @@
 <auro-datepicker onDark>
+  <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
