--- a/components/input/apiExamples/emphasized/basic.html
+++ b/components/input/apiExamples/emphasized/basic.html
@@ -3,6 +3,7 @@
 </auro-input> -->
 
 <auro-input id="alpha" value="lax" layout="emphasized" shape="box" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+  <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
   <span slot="displayValue">
@@ -14,16 +15,19 @@
 </auro-input>
 
 <auro-input id="beta" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+  <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
 </auro-input>
 
 <auro-input id="charlie" layout="emphasized-left" shape="pill-left" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+  <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
 </auro-input>
 
 <auro-input id="delta" layout="emphasized-right" shape="pill-right" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+  <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
 </auro-input>
