--- a/components/select/apiExamples/basic.html
+++ b/components/select/apiExamples/basic.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <span slot="ariaLabel.bib.close">Close Popup</span>
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <span slot="label">Select Example</span>
   <auro-menu>
