--- a/components/select/apiExamples/classic/basic.html
+++ b/components/select/apiExamples/classic/basic.html
@@ -1,4 +1,5 @@
 <auro-select placeholder="Placeholder content">
+  <span slot="ariaLabel.bib.close">Close Popup</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name with placeholder</span>
   <auro-menu>
