--- a/components/select/apiExamples/emphasized/basic.html
+++ b/components/select/apiExamples/emphasized/basic.html
@@ -1,5 +1,6 @@
 <div style="display: flex; flex-direction: row; gap: 10px;">
   <auro-select layout="emphasized" shape="pill" size="xl" value="flights" forceDisplayValue style="display:inline-block;">
+    <span slot="ariaLabel.bib.close">Close Popup</span>
     <span slot="label">Select Example</span>
     <auro-menu nocheckmark>
       <auro-menuoption value="flights">
