--- a/components/select/apiExamples/snowflake/basic-ondark.html
+++ b/components/select/apiExamples/snowflake/basic-ondark.html
@@ -1,4 +1,5 @@
 <auro-select layout="snowflake" shape="snowflake" ondark required style="width:300px;">
+  <span slot="ariaLabel.bib.close">Close Popup</span>
   <span slot="label">Label</span>
   <span slot="helpText">Help Text</span>
   <auro-menu nocheckmark>
