--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -16,6 +16,12 @@
   }
 }
 
+:host([layout="classic"]) {
+  .triggerContent {
+    padding: 0 0 0 var(--ds-size-100, 0.5rem);
+  }
+}
+
 :host([layout="snowflake"]) {
   [auro-dropdown] {
     .mainContent {
