--- a/components/input/src/styles/style.scss
+++ b/components/input/src/styles/style.scss
@@ -30,8 +30,9 @@ input {
   
   &::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
-    -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    // stylelint-disable-next-line property-no-vendor-prefix
+    -webkit-appearance: none;
   }
 
   /* stylelint-enable declaration-no-important */
