perf: update @import to @use

--- a/components/datepicker/src/styles/color-month.scss
+++ b/components/datepicker/src/styles/color-month.scss
@@ -5,7 +5,7 @@
 
 // Import Auro tokens
 @use '@aurodesignsystem/webcorestylesheets/src/breakpoints' as vb;
-@import '@aurodesignsystem/webcorestylesheets/src/core';
+@use '@aurodesignsystem/webcorestylesheets/src/core';
 
 
 :host {
