--- a/components/datepicker/src/styles/snowflake/style.scss
+++ b/components/datepicker/src/styles/snowflake/style.scss
@@ -1,69 +1,5 @@
 @use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
-.accents {
-  flex-grow: 0;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  &.left {
-    padding-right: var(--ds-size-100, vac.$ds-size-100);
-  }
-
-  &.right {
-    width: var(--ds-size-400, vac.$ds-size-400);
-  }
-}
-
-.mainContent {
-  height: 100%;
-  max-height: 100%;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-.inputSection {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  width: 100%; // from designs
-  max-width: 250px; // not from designs, given to add breathing room to inputs
-  margin: 0 auto;
-}
-
-.inputSection:not(:is(.disabled, .hasFocus, .hasValue)) {
-  .inputDivider {
-    display: none;
-  }
-}
-
-.inputContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-
-  &:first-of-type {
-    justify-content: flex-end;
-  }
-
-  &:last-of-type {
-    justify-content: flex-start;
-  }
-}
-
-:host([disabled]) {
-  .inputSection {
-    display: none;
-  }
-}
-
 :host([layout*='snowflake']) {
   [auro-input] {
     flex: 1;
@@ -154,4 +90,15 @@
     margin: 4px 12px;
     width: 2px;
   }
+
+  .inputSection:not(:is(.disabled, .hasFocus, .hasValue)) {
+    .inputDivider {
+      display: none;
+    }
+  }
+}
+
+// TODO: refactor this - should not just hide _everything_
+:host([layout*='snowflake'][disabled]) {
+  pointer-events: none;
 }
