--- a/components/datepicker/src/styles/style.scss
+++ b/components/datepicker/src/styles/style.scss
@@ -9,152 +9,62 @@
 @use '@aurodesignsystem/webcorestylesheets/src/breakpoints' as vb;
 @use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
-:host([layout="classic"]) {
-  [auro-input] {
-    &::part(iconContainer) {
-      top: 0;
-      display: flex;
-      height: 100%;
-      align-items: center;
-    }
+.accents {
+  flex-grow: 0;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    &::part(accentIcon) {
-      transition: all .3s cubic-bezier(.215, .61, .355, 1);
-    }
-
-    &::part(helpText) {
-      display: none;
-    }
-
-    &::part(wrapper) {
-      &:focus-within {
-        &:before {
-          border-bottom-width: 0 !important;
-          box-shadow: unset !important;
-          outline: unset !important;
-        }
-      }
-
-  .dpTriggerContent {
-    display: flex;
-    flex-direction: column;
-
-    [auro-input] {
-      flex: 1;
-    }
+  &.left {
+    padding-right: var(--ds-size-100, vac.$ds-size-100);
   }
 
-  // Container queries
-
-  /* This value is per design but relates to
-    https://github.com/AlaskaAirlines/AuroDesignTokens/issues/206
-  */
-  // :host(:not([stacked])) {
-    .dpTriggerContent {
-      flex-direction: row;
-    }
-
-    [auro-input] {
-      &:first-of-type {
-        margin-right: var(--ds-size-150, vac.$ds-size-150);
-        --ds-auro-input-border-color: transparent;
-        --ds-auro-input-container-color: transparent;
-      }
-
-      // Horizontal ruler
-      &:not(:first-child) {
-        &::part(wrapper) {
-          /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
-          &::after {
-            position: absolute;
-            left: 50%;
-            width: 95%;
-            height: 1px;
-            background-color: var(--ds-auro-datepicker-range-input-divider-color);
-            content: '';
-            transform: translateX(-50%);
-          }
-        }
-      }
-    }
-
-    .outerWrapper {
-      position: relative;
-      container: outerwrapper / inline-size;
-    }
-
-    .dpTriggerContent {
-      display: flex;
-      flex-direction: column;
-
-      [auro-input] {
-        flex: 1;
-      }
-    }
-
-    // Container queries
-
-    /* This value is per design but relates to
-      https://github.com/AlaskaAirlines/AuroDesignTokens/issues/206
-    */
-    &:not([stacked]) {
-      .dpTriggerContent {
-        flex-direction: row;
-      }
-
-      [auro-input] {
-        &:first-of-type {
-          margin-right: var(--ds-size-150, vac.$ds-size-150);
-        }
-
-        &:nth-child(2) {
-          margin-left: var(--ds-size-150, vac.$ds-size-150);
-
-          &::part(accentIcon) {
-            display: none;
-          }
-
-          &::part(label) {
-            left: 0;
-            width: 100%;
-          }
-
-          &::part(input) {
-            padding-left: 0;
-          }
-
-          &:before {
-            position: absolute;
-            top: 13px;
-            left: calc(var(--ds-size-150, vac.$ds-size-150) * -1);
-            display: block;
-            width: 1px;
-            height: 2rem;
-            content: '';
-          }
-        }
-
-        // Hide horizontal ruler
-        &:not(:first-child) {
-          /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
-          &::part(wrapper) {
-            &:after {
-              content: none;
-            }
-          }
-        }
-      }
-    }
-
-    &:not([stacked])[range] {
-      [auro-input] {
-        max-width: 50%;
-      }
-    }
-
-  }
+  &.right {
+    width: var(--ds-size-400, vac.$ds-size-400);
   }
 }
+
+.mainContent {
+  height: 100%;
+  max-height: 100%;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.inputSection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  width: 100%;
+  margin: 0 auto;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+
+  &:first-of-type {
+    justify-content: flex-end;
+  }
+
+  &:last-of-type {
+    justify-content: flex-start;
+  }
+}
+
+.dpTriggerContent {
+  width: 100%;
+}
+
+
 @include vb.auro_breakpoint($max: vac.$ds-grid-breakpoint-sm) {
   ::part(popover) {
     position: fixed !important;
