fix: apply type classes to helptext and menu
- correct casing for helpText slot  in counter

--- a/components/counter/apiExamples/ondark-counter-helptext.html
+++ b/components/counter/apiExamples/ondark-counter-helptext.html
@@ -1,4 +1,4 @@
 <auro-counter ondark>
   Adults
-  <span slot="helptext">This is help text for the counter</span>
+  <span slot="helpText">This is help text for the counter</span>
 </auro-counter>
