--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -7,6 +7,7 @@
 @use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 @use '@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska' as v;
 @use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+@use '@aurodesignsystem/webcorestylesheets/dist/bundled/type/classes.alaska.min.css';
 
 /* stylelint-disable
   selector-class-pattern,
@@ -97,7 +98,6 @@
   [auro-dropdown] {
     label {
       &.withValue {
-        font-size: var(--ds-text-body-size-xs);
         line-height: 20px;
       }
     }
@@ -108,7 +108,6 @@
   [auro-dropdown] {
     label {
       &.withValue {
-        font-size: var(--ds-text-body-size-xs);
         line-height: 20px;
       }
     }
@@ -127,7 +126,6 @@
   label {
     overflow: hidden;
     cursor: text;
-    font-size: 16px;
     font-weight: 450;
     letter-spacing: 0;
     line-height: 24px;
@@ -135,7 +133,6 @@
     white-space: nowrap;
 
     &.withValue {
-      font-size: 12px;
       font-weight: 450;
       letter-spacing: 0;
       line-height: 16px;
@@ -144,7 +141,6 @@
 
   .value {
     height: auto;
-    font-size: 16px;
     font-weight: 450;
     letter-spacing: 0;
     line-height: 24px;
