fix: remove double background color in combobox trigger #791

--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -9,6 +9,12 @@
   display: block;
 }
 
+:host {
+  [auro-input] {
+    --ds-auro-input-background-color: transparent;
+  }
+}
+
 :host([layout*='classic']) {
   [auro-input] {
     width: 100%;
