docs: update select docs for layout support

--- a/components/select/apiExamples/customErrorValidity.html
+++ b/components/select/apiExamples/customErrorValidity.html
@@ -1,7 +1,6 @@
-<auro-select id="primaryError">
+<auro-select id="primaryError" placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <label slot="placeholder">Placeholder Text</label>
-  <span slot="label">Select Example</span>
+  <span slot="label">Label</span>
   <auro-menu>
     <auro-menuoption value="1">1</auro-menuoption>
     <auro-menuoption value="2">2</auro-menuoption>
