--- a/components/select/apiExamples/customPlaceholder.html
+++ b/components/select/apiExamples/customPlaceholder.html
@@ -1,6 +1,6 @@
-<auro-select>
+<auro-select placeholder="Please select your preferred option">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <label slot="placeholder">Please select your preferred option</label>
+  <span slot="label">Label</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
