--- a/components/select/apiExamples/flexMenuWidth.html
+++ b/components/select/apiExamples/flexMenuWidth.html
@@ -1,7 +1,6 @@
-<auro-select flexMenuWidth id="flexMenuWidthExample">
-  <span slot="label">flexMenuWidth select example</span>
+<auro-select flexMenuWidth id="flexMenuWidthExample" placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <label slot="placeholder">Placeholder Text</label>
+  <span slot="label">Label</span>
   <auro-menu>
     <auro-menuoption value="united states">United States has a country code of (+1)</auro-menuoption>
     <auro-menuoption value="costa rica">Costa Rica has a country code of (+506)</auro-menuoption>
