--- a/components/select/apiExamples/noCheckmark.html
+++ b/components/select/apiExamples/noCheckmark.html
@@ -1,7 +1,6 @@
-<auro-select nocheckmark>
-    <span slot="bib.fullscreen.headline">Bib Headline</span>
-    <label slot="placeholder">Placeholder Text</label>
-    <span slot="label">nocheckmark Select Example</span>
+<auro-select nocheckmark placeholder="Placeholder Text">
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
+  <span slot="label">Label</span>
     <auro-menu>
         <auro-menuoption value="stops">Stops</auro-menuoption>
         <auro-menuoption value="price">Price</auro-menuoption>
