--- a/components/select/apiExamples/resetState.html
+++ b/components/select/apiExamples/resetState.html
@@ -1,9 +1,9 @@
 <auro-button id="resetStateBtn">Reset</auro-button>
 <br/><br/>
 
-<auro-select id="resetStateExample" value="price">
+<auro-select id="resetStateExample" value="price" placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <label slot="placeholder">Placeholder Text</label>
+  <span slot="label">Label</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
