--- a/components/select/apiExamples/required.html
+++ b/components/select/apiExamples/required.html
@@ -1,7 +1,6 @@
-<auro-select required setCustomValidityValueMissing="Custom required validation error message.">
+<auro-select required setCustomValidityValueMissing="Custom required validation error message." placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <span slot="label">required field</span>
-  <label slot="placeholder">Placeholder Text</label>
+  <span slot="label">Label</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
