--- a/components/select/apiExamples/slots.html
+++ b/components/select/apiExamples/slots.html
@@ -1,8 +1,7 @@
-<auro-select>
+<auro-select placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <label slot="placeholder">Placeholder Text</label>
-  <span slot="label">Please choose a preference</span>
-  <span slot="helpText">Preferences are maintained for future use</span>
+  <span slot="label">Label</span>
+  <span slot="helpText">Help Text</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
