--- a/components/select/apiExamples/snowflake/basic-ondark.html
+++ b/components/select/apiExamples/snowflake/basic-ondark.html
@@ -1,75 +1,21 @@
-<div style="display: flex; flex-direction: row; gap: 10px;">
-  <auro-select layout="snowflake" shape="snowflake" value="flights" forceDisplayValue ondark style="display:inline-block;">
-    <span slot="label">Select Example</span>
-    <auro-menu nocheckmark>
-      <auro-menuoption value="flights">
-        <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="terminal" name="plane-diag-fill" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="cars">
-        <auro-icon category="destination" name="car-rental-stroke" customcolor></auro-icon> Cars
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="car-rental-stroke" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="hotels">
-        <auro-icon category="destination" name="hotel-stroke" customcolor></auro-icon> Hotels
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="hotel-filled" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="packages">
-        <auro-icon category="shop" name="gift-stroke" customcolor></auro-icon> Packages
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="shop" name="gift-filled" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="cruises">
-        <auro-icon category="in-flight" name="boarding" customcolor></auro-icon> Cruises
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="in-flight" name="boarding" customcolor></auro-icon>
-      </auro-menuoption>
-    </auro-menu>
-  </auro-select>
-
-  <auro-select layout="snowflake" shape="snowflake" value="flights" ondark style="display:inline-block;">
-    <span slot="label">Select Example</span>
-    <auro-menu nocheckmark>
-      <auro-menuoption value="flights">
-        <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="terminal" name="plane-diag-fill" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="cars">
-        <auro-icon category="destination" name="car-rental-stroke" customcolor></auro-icon> Cars
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="car-rental-stroke" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="hotels">
-        <auro-icon category="destination" name="hotel-stroke" customcolor></auro-icon> Hotels
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="hotel-filled" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="packages">
-        <auro-icon category="shop" name="gift-stroke" customcolor></auro-icon> Packages
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="shop" name="gift-filled" customcolor></auro-icon>
-      </auro-menuoption>
-      <auro-menuoption value="cruises">
-        <auro-icon category="in-flight" name="boarding" customcolor></auro-icon> Cruises
-        <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="in-flight" name="boarding" customcolor></auro-icon>
-      </auro-menuoption>
-    </auro-menu>
-  </auro-select>
-
-  <auro-select layout="snowflake" shape="snowflake" value="flights" required ondark style="display:inline-block;">
-    <span slot="label">Select Example</span>
-    <span slot="helpText">no displayValue in menuoptions</span>
-    <auro-menu nocheckmark>
-      <auro-menuoption value="flights">
-        <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
-      </auro-menuoption>
-      <auro-menuoption value="cars">
-        <auro-icon category="destination" name="car-rental-stroke" customcolor></auro-icon> Cars
-      </auro-menuoption>
-      <auro-menuoption value="hotels">
-        <auro-icon category="destination" name="hotel-stroke" customcolor></auro-icon> Hotels
-      </auro-menuoption>
-      <auro-menuoption value="packages">
-        <auro-icon category="shop" name="gift-stroke" customcolor></auro-icon> Packages
-      </auro-menuoption>
-      <auro-menuoption value="cruises">
-        <auro-icon category="in-flight" name="boarding" customcolor></auro-icon> Cruises
-      </auro-menuoption>
-    </auro-menu>
-  </auro-select>
-</div>
+<auro-select layout="snowflake" shape="snowflake" ondark required style="width:300px;">
+  <span slot="label">Label</span>
+  <span slot="helpText">Help Text</span>
+  <auro-menu nocheckmark>
+    <auro-menuoption value="flights">
+      <auro-icon category="terminal" name="plane-diag-stroke" customColor></auro-icon> Flights
+    </auro-menuoption>
+    <auro-menuoption value="cars">
+      <auro-icon category="destination" name="car-rental-stroke" customColor></auro-icon> Cars
+    </auro-menuoption>
+    <auro-menuoption value="hotels">
+      <auro-icon category="destination" name="hotel-stroke" customColor></auro-icon> Hotels
+    </auro-menuoption>
+    <auro-menuoption value="packages">
+      <auro-icon category="shop" name="gift-stroke" customColor></auro-icon> Packages
+    </auro-menuoption>
+    <auro-menuoption value="cruises">
+      <auro-icon category="in-flight" name="boarding" customColor></auro-icon> Cruises
+    </auro-menuoption>
+  </auro-menu>
+</auro-select>
