--- a/components/select/apiExamples/valueAlert.html
+++ b/components/select/apiExamples/valueAlert.html
@@ -1,7 +1,6 @@
-<auro-select id="valueAlert">
-  <span slot="label">Select Example</span>
+<auro-select id="valueAlert" placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <label slot="placeholder">Placeholder Text</label>
+  <span slot="label">Label</span>
   <auro-menu id="valueAlertMenu">
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
