--- a/components/input/apiExamples/onDark.html
+++ b/components/input/apiExamples/onDark.html
@@ -1,4 +1,4 @@
-<auro-input ondark shape="rounded" size="lg">
+<auro-input ondark>
   <span slot="label">Label</span>
   <span slot="helpText">Help Text</span>
 </auro-input>
