fix: layout props in input were not dynamic when placed inside private defaults

--- a/components/combobox/apiExamples/swapValue.html
+++ b/components/combobox/apiExamples/swapValue.html
@@ -15,8 +15,7 @@
     <auro-icon
       customColor
       category="terminal" 
-      name="round-trip-arrows"
-      slot="icon">
+      name="round-trip-arrows">
     </auro-icon>
   </auro-button>
   <auro-combobox id="swapExampleRight">
