fix: remove box-sizing from input wrapper and add border style to dropdown for combobox

--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  [auro-dropdown] {
+    &::part(wrapper) {
+      border: 0;
+    }
+  }
+
   #slotHolder{
     display: none;
   }
